'added-first-seller'

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -7,8 +7,10 @@
   <link rel="stylesheet" href="popup.css">
 </head>
 <body>
-  <h1>Product Name</h1>
-  <div id="productName"></div>
+  <h1>Product Sellers</h1>
+  <div id="productName">Product name: </div>
+  <div id="sellerName">Seller name: </div>
+
   <script src="popup.js"></script>
 </body>
 </html>
