--- a/popup/popup.html
+++ b/popup/popup.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="popup.css">
 </head>
 <body>
-  <h1>Product Sellers</h1>
+  <h1>Amazon Seller Optimizer</h1>
   <div id="productName">Product name: </div>
   <div id="sellers"></div>
 
